# open-code-atlas-cursor

./: .gitignore  README.md  admin.py  alembic.ini  database.py  main.py  middleware.py  models.py  pyproject.toml  schemas.py  seed.py
core/: security.py
models/: __init__.py  course.py  enrollment.py  lesson.py  user.py
routers/api/: admin.py
routers/api/admin/: course.py  enrollment.py  user.py
routers/web/: courses.py  users.py
schemas/: __init__.py  course.py  enrollment.py  lesson.py  user.py
static/css/: styles.css
static/js/: main.js
templates/: account.html  base.html  course.html
