[project]
name = "pseudo-code-atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.128.2",
    "greenlet>=3.3.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.46",
]
